--- a/docs-2.0/7.data-security/1.authentication/2.management-user.md
+++ b/docs-2.0/7.data-security/1.authentication/2.management-user.md
@@ -172,7 +172,7 @@ The `root` user with the **GOD** role can run `ALTER USER` to set a new password
 - Syntax with enterprise edition
   
   ```ngql
-    ALTER USER <user_name> [WITH PASSWORD '<password>'] [WITH IP WHITELIST <ip_list>];
+    ALTER USER <user_name> [WITH PASSWORD '<password>'] [WITH IP WHITELIST { <ip_list> | % }];
   ```
 
   - `ip_list`: Sets the IP address whitelist. Any IP can connect to the database without this option. When this option is used, only IPs in the list can connect to the database. Use commas to separate multiple IP addresses.
