--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -130,6 +130,8 @@
           # Evenly distribute the Pods of the Storage service across Zones.
           --set nebula.topologySpreadConstraints[0].topologyKey=topology.kubernetes.io/zone \
           --set nebula.topologySpreadConstraints[0].whenUnsatisfiable=DoNotSchedule \
+          # Used to schedule restarted Graph or Storage Pods to the specified Zone.
+          --set nebula.schedulerName=nebula-scheduler \
           --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
       ```      
 
@@ -146,7 +148,7 @@
   Use the `--set` argument to set configuration parameters for the cluster. For example, `--set nebula.storaged.replicas=3` will set the number of replicas for the Storage service in the cluster to 3.
 
 
-1. Check the status of the NebulaGraph cluster you created.
+7. Check the status of the NebulaGraph cluster you created.
    
   ```bash
   kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" get pod -l "app.kubernetes.io/cluster=${NEBULA_CLUSTER_NAME}"
