--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -132,6 +132,8 @@
           # Evenly distribute the Pods of the Storage service across Zones.
           --set nebula.topologySpreadConstraints[0].topologyKey=topology.kubernetes.io/zone \
           --set nebula.topologySpreadConstraints[0].whenUnsatisfiable=DoNotSchedule \
+          # Used to schedule restarted Graph or Storage Pods to the specified Zone.
+          --set nebula.schedulerName=nebula-scheduler \
           --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
       ```      
 
