--- a/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -78,7 +78,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 | `ws_http_port`             | `19669`          | Specifies the port for the HTTP service. |  No|
 |`heartbeat_interval_secs`   | `10`             | Specifies the default heartbeat interval. Make sure the `heartbeat_interval_secs` values for all services are the same, otherwise NebulaGraph **CANNOT** work normally. This configuration is measured in seconds. |  Yes|
 |`storage_client_timeout_ms` |-| Specifies the RPC connection timeout threshold between the Graph Service and the Storage Service. This parameter is not predefined in the initial configuration files. You can manually set it if you need it. The system default value is `60000` ms. |  No|
-|`enable_record_slow_query`|`true`|Whether to record slow queries. <br/> Only available in NebulaGraph Enterprise Edition.<br/>When set to `true`, if a query's execution time exceeds the duration defined by `slow_query_threshold_us`, NebulaGraph will log that query to a log file. <br/>Additionally, the slow query will be cached in memory within the `graphd` process until the number of cached slow query records reaches the limit defined by `slow_query_limit`. <br/>Cached slow query records can be retrieved through an HTTP interface.|  No|
+|`enable_record_slow_query`|`true`|Whether to record slow queries. <br/> Only available in NebulaGraph Enterprise Edition.<br/>When set to `true`, if a query's execution time exceeds the duration defined by `slow_query_threshold_us`, NebulaGraph logs that query to a log file. <br/>Additionally, the graphd process caches the most recent slow queries in memory, and the number of queries cached is determined by the `slow_query_limit` setting. <br/>Cached slow query records can be retrieved through an HTTP interface.|  No|
 |`slow_query_limit`|`100`|The maximum number of slow queries that can be recorded. <br/> Only available in NebulaGraph Enterprise Edition.|  No|
 |`slow_query_threshold_us`|`200000`|When the execution time of a query exceeds the value, the query is called a slow query. Unit: Microsecond.|  No|
 |`ws_meta_http_port`         |`19559`| Specifies the Meta service listening port used by the HTTP protocol. It must be consistent with the `ws_http_port` in the Meta service configuration file.|  No|
