--- a/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -54,7 +54,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 | Name                          | Predefined value         | Description       |Whether supports runtime dynamic modifications|
 | ----------------------------- | ------------------------ | ------------------------------------------ |------------------|
-|`accept_partial_success`       |`false`                   | When set to `false`, the process treats partial success as an error. This configuration only applies to read-only requests. Write requests always treat partial success as an error. |  Yes|
+|`accept_partial_success`       |`false`                   | When set to `false`, the process treats partial success as an error. This configuration only applies to read-only requests. Write requests always treat partial success as an error. A partial success query will prompt `Got partial result`.|  Yes|
 |`session_reclaim_interval_secs`|`60`                      | Specifies the interval that the Session information is sent to the Meta service. This configuration is measured in seconds. |  Yes|
 |`max_allowed_query_size`       |`4194304`                 | Specifies the maximum length of queries. Unit: bytes. The default value is `4194304`, namely 4MB.|  Yes|
 
