change zone fields to dynamically configurable

--- a/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -197,7 +197,7 @@ For more information about audit log, see [Audit log](../2.log-management/audit-
 | Name                              | Default Value | Description                                                                                                                             | Runtime Dynamic Modification Supported |
 | :-------------------------------- | :------------ | :-------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------- |
 | `assigned_zone`                   | Empty         | When the Zone feature is enabled, set the Zone where the graphd to be located. See [Managing Zones](../../4.deployment-and-installation/5.zone.md) for details. | No                                    |
-| `prioritize_intra_zone_reading`   | `false`       | When set to `true`, prioritize to send queries to the Storage services in the same Zone. If reading fails, it depends on the value of `stick_to_intra_zone_on_failure` to determine whether to send requests to the leader partition replicas.<br/>When set to `false`, data is read from the leader partition replicas. | No                            |
-| `stick_to_intra_zone_on_failure`  | `false`       | When set to `true`, stick to intra-zone routing if unable to find the storaged hosting the requested partition replica in the same Zone. <br/>When set to `false`, sending requests to leader partition replicas. | No                            |                    
+| `prioritize_intra_zone_reading`   | `false`       | When set to `true`, prioritize to send queries to the Storage services in the same Zone. If reading fails, it depends on the value of `stick_to_intra_zone_on_failure` to determine whether to send requests to the leader partition replicas.<br/>When set to `false`, data is read from the leader partition replicas. | Yes                            |
+| `stick_to_intra_zone_on_failure`  | `false`       | When set to `true`, stick to intra-zone routing if unable to find the storaged hosting the requested partition replica in the same Zone. <br/>When set to `false`, sending requests to leader partition replicas. | Yes                            |                    
 
 {{ ent.ent_end }}
