--- a/docs-2.0-zh/nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
+++ b/docs-2.0-zh/nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
@@ -143,7 +143,7 @@ nebula-license-manager   ClusterIP   10.108.xxx.219   <none>        9119/TCP   3
 
 ## 监控 LM 
 
-用户可以使用监控工具（{{dashboard_ent.name}}、Prometheus）监控 LM 的状态及指标。详情参见[监控 LM](../../9.about-license/2.license-management-suite/3.license-manager.md)。
+用户可以使用监控工具监控 LM 的状态及指标。详情参见[监控 LM](../../9.about-license/2.license-management-suite/3.license-manager.md)。
 
 ##  使用 LM 管理 License
 
