--- a/docs-2.0-en/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-en/20.appendix/6.eco-tool-version.md
@@ -33,7 +33,7 @@ NebulaGraph Dashboard Community Edition (Dashboard for short) is a visualization
 
 ## NebulaGraph Exchange
 
-NebulaGraph Exchange (Exchange for short) is an Apache Spark&trade application for batch migration of data in a cluster to NebulaGraph in a distributed environment. It can support the migration of batch data and streaming data in a variety of different formats. For details, see [What is NebulaGraph Exchange](../nebula-exchange/about-exchange/ex-ug-what-is-exchange.md).
+NebulaGraph Exchange (Exchange for short) is an Apache Spark&trade application for batch migration of data in a cluster to NebulaGraph in a distributed environment. It can support the migration of batch data and streaming data in a variety of different formats. For details, see [What is NebulaGraph Exchange](../import-export/nebula-exchange/about-exchange/ex-ug-what-is-exchange.md).
 
 |NebulaGraph version|Exchange Community version|
 |:---|:---|
@@ -49,7 +49,7 @@ NebulaGraph Operator (Operator for short) is a tool to automate the deployment, 
 
 ## NebulaGraph Importer
 
-NebulaGraph Importer (Importer for short) is a CSV file import tool for NebulaGraph. The Importer can read the local CSV file, and then import the data into the NebulaGraph database. For details, see [What is NebulaGraph Importer](../nebula-importer/use-importer.md).
+NebulaGraph Importer (Importer for short) is a CSV file import tool for NebulaGraph. The Importer can read the local CSV file, and then import the data into the NebulaGraph database. For details, see [What is NebulaGraph Importer](../import-export/use-importer.md).
 
 |NebulaGraph version|Importer version|
 |:---|:---|
@@ -57,7 +57,7 @@ NebulaGraph Importer (Importer for short) is a CSV file import tool for NebulaGr
 
 ## NebulaGraph Spark Connector
 
-NebulaGraph Spark Connector is a Spark connector that provides the ability to read and write NebulaGraph data in the Spark standard format. NebulaGraph Spark Connector consists of two parts, Reader and Writer. For details, see [What is NebulaGraph Spark Connector](../nebula-spark-connector.md).
+NebulaGraph Spark Connector is a Spark connector that provides the ability to read and write NebulaGraph data in the Spark standard format. NebulaGraph Spark Connector consists of two parts, Reader and Writer. For details, see [What is NebulaGraph Spark Connector](../import-export/nebula-spark-connector.md).
 
 |NebulaGraph version|Spark Connector version|
 |:---|:---|
@@ -65,7 +65,7 @@ NebulaGraph Spark Connector is a Spark connector that provides the ability to re
 
 ## NebulaGraph Flink Connector
 
-NebulaGraph Flink Connector is a connector that helps Flink users quickly access NebulaGraph. It supports reading data from the NebulaGraph database or writing data read from other external data sources to the NebulaGraph database. For details, see [What is NebulaGraph Flink Connector](../nebula-flink-connector.md).
+NebulaGraph Flink Connector is a connector that helps Flink users quickly access NebulaGraph. It supports reading data from the NebulaGraph database or writing data read from other external data sources to the NebulaGraph database. For details, see [What is NebulaGraph Flink Connector](../import-export/nebula-flink-connector.md).
 
 |NebulaGraph version|Flink Connector version|
 |:---|:---|
