--- a/docs-2.0-en/7.data-security/4.ssl.md
+++ b/docs-2.0-en/7.data-security/4.ssl.md
@@ -1,6 +1,6 @@
 # SSL encryption
 
-NebulaGraph supports SSL encrypted transfers between the Client, Graph Service, Meta Service, and Storage Service, and this article describes how to set up SSL encryption.
+NebulaGraph supports SSL encrypted transfers between the Client, Graph Service, Meta Service, and Storage Service, and this topic describes how to set up SSL encryption.
 
 ## Precaution
 
