--- a/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/6.deploy-nebula-graph-with-peripherals.md
+++ b/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/6.deploy-nebula-graph-with-peripherals.md
@@ -1,6 +1,6 @@
 # Install NebulaGraph with ecosystem tools
 
-You can install the Enterprise Edition and Community Edition of NebulaGraph with the following ecosystem tools:
+You can install the NebulaGraph Community Edition with the following ecosystem tools:
 
 - NebulaGraph Operator
 
