--- a/docs-2.0-en/7.data-security/4.ssl.md
+++ b/docs-2.0-en/7.data-security/4.ssl.md
@@ -22,7 +22,7 @@ To use SSL encryption, SSL certificates are required. NebulaGraph supports two c
 
 Policies for the NebulaGraph community edition.
 
-|Scenes | TLS |
+|Scene | TLS |
 |:---|:---|
 |External device access to Graph| Modify the Graph configuration file to add the following parameters:</br>`--enable_graph_ssl = true`</br> `--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx`|
 |Graph access Meta |In the Graph/Meta configuration file, add the following parameters:</br>`--enable_meta_ssl = true`</br>`--ca_path=xxxxxx`</br>`--cert_path=xxxxxx`</br>`--key_path=xxxxxx` |
