keep operator comm content consistency between en & ch

--- a/docs-2.0-en/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0-en/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -65,23 +65,9 @@
   kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" get pod -l "app.kubernetes.io/cluster=${NEBULA_CLUSTER_NAME}"
   ```
 
-  Output:
-
-  ```bash
-  NAME                READY   STATUS    RESTARTS   AGE
-  nebula-graphd-0     1/1     Running   0          5m34s
-  nebula-graphd-1     1/1     Running   0          5m34s
-  nebula-metad-0      1/1     Running   0          5m34s
-  nebula-metad-1      1/1     Running   0          5m34s
-  nebula-metad-2      1/1     Running   0          5m34s
-  nebula-storaged-0   1/1     Running   0          5m34s
-  nebula-storaged-1   1/1     Running   0          5m34s
-  nebula-storaged-2   1/1     Running   0          5m34s
-  ```
-
 ## Scaling clusters
 
-- The cluster scaling feature is for NebulaGraph Enterprise Edition only. 
+The cluster scaling feature is for NebulaGraph Enterprise Edition only.
 
 ## Delete clusters
 
