--- a/docs-2.0-en/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0-en/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -21,41 +21,41 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
   ```
 
 2. Create a file named `apps_v1alpha1_nebulacluster.yaml`.
-
-  - To create a NebulaGraph Community cluster
   
-    See [community cluster configurations](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml).
+  For the sample configuration file, see [sample configurations](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml).
 
-    ??? Info "Expand to show parameter descriptions of community clusters"
+  The following table describes the parameters in the sample configuration file.
 
-        | Parameter    | Default value  | Description    |
-        | :---- | :--- | :--- |
-        | `metadata.name`              | -                                                            | The name of the created NebulaGraph cluster. |
-        |`spec.console`|-| Configuration of the Console service. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).|
-        | `spec.graphd.replicas`       | `1`                                                          | The numeric value of replicas of the Graphd service.         |
-        | `spec.graphd.image`         | `vesoft/nebula-graphd`                                       | The container image of the Graphd service.      |
-        | `spec.graphd.version`        | `{{nebula.tag}}`                                          | The version of the Graphd service.         |
-        | `spec.graphd.service`        | -                                                            | The Service configurations for the Graphd service.      |
-        | `spec.graphd.logVolumeClaim.storageClassName`   | -                                         | The log disk storage configurations for the Graphd service.         |
-        | `spec.metad.replicas`        | `1`                                                          | The numeric value of replicas of the Metad service.          |
-        | `spec.metad.image`          | `vesoft/nebula-metad`                                        | The container image of the Metad service.        |
-        | `spec.metad.version`         | `{{nebula.tag}}`                                          | The version of the Metad service.          |
-        | `spec.metad.dataVolumeClaim.storageClassName`    | -                                        | The data disk storage configurations for the Metad service.          |
-        | `spec.metad.logVolumeClaim.storageClassName`|-                                              | The log disk storage configurations for the Metad service.|
-        | `spec.storaged.replicas`     | `3`                                                          | The numeric value of replicas of the Storaged service.       |
-        | `spec.storaged.image`       | `vesoft/nebula-storaged`                                     | The container image of the Storaged service.     |
-        | `spec.storaged.version`      | `{{nebula.tag}}`                                          | The version of the Storaged service.       |
-        | `spec.storaged.dataVolumeClaims.resources.requests.storage` | - | Data disk storage size for the Storaged service. You can specify multiple data disks to store data. When multiple disks are specified, the storage path is `/usr/local/nebula/data1`, `/usr/local/nebula/data2`, etc.|
-        | `spec.storaged.dataVolumeClaims.resources.storageClassName` | - | The data disk storage configurations for Storaged. If not specified, the global storage parameter is applied. |
-        | `spec.storaged.logVolumeClaim.storageClassName`|-                                           | The log disk storage configurations for the Storaged service.|
-        | `spec.storaged.enableAutoBalance` | `true` |Whether to balance data automatically. |
-        |`spec.<metad|storaged|graphd>.securityContext`|`{}`|Defines privilege and access control settings for NebulaGraph service containers. For details, see [SecurityContext](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.branch}}/doc/user/security_context.md). |
-        |`spec.agent`|`{}`| Configuration of the Agent service. This is used for backup and recovery as well as log cleanup functions. If you do not customize this configuration, the default configuration will be used.|
-        | `spec.reference.name`        | -                                                            | The name of the dependent controller.           |
-        | `spec.schedulerName`         | -                                                            | The scheduler name.                 |
-        | `spec.imagePullPolicy`       | The image policy to pull the NebulaGraph image. For details, see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy). | The image pull policy in Kubernetes.               |
-        |`spec.logRotate`| - |Log rotation configuration. For more information, see [Manage cluster logs](../8.custom-cluster-configurations/8.4.manage-running-logs.md).|
-        |`spec.enablePVReclaim`|`false`|Define whether to automatically delete PVCs and release data after deleting the cluster. For more information, see [Reclaim PVs](../8.custom-cluster-configurations/8.2.pv-reclaim.md).|
+  | Parameter                                                   | Default value                                                                                                                                                   | Description                                                                                                                                                                                                           |
+  | :---------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+  | `metadata.name`                                             | -                                                                                                                                                               | The name of the created NebulaGraph cluster.                                                                                                                                                                          |
+  | `spec.console`                                              | -                                                                                                                                                               | Configuration of the Console service. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v1.5.0/doc/user/nebula_console.md#nebula-console).                                         |
+  | `spec.graphd.replicas`                                      | `1`                                                                                                                                                             | The numeric value of replicas of the Graphd service.                                                                                                                                                                  |
+  | `spec.graphd.image`                                         | `vesoft/nebula-graphd`                                                                                                                                          | The container image of the Graphd service.                                                                                                                                                                            |
+  | `spec.graphd.version`                                       | `v3.6.0`                                                                                                                                                        | The version of the Graphd service.                                                                                                                                                                                    |
+  | `spec.graphd.service`                                       | -                                                                                                                                                               | The Service configurations for the Graphd service.                                                                                                                                                                    |
+  | `spec.graphd.logVolumeClaim.storageClassName`               | -                                                                                                                                                               | The log disk storage configurations for the Graphd service.                                                                                                                                                           |
+  | `spec.metad.replicas`                                       | `1`                                                                                                                                                             | The numeric value of replicas of the Metad service.                                                                                                                                                                   |
+  | `spec.metad.image`                                          | `vesoft/nebula-metad`                                                                                                                                           | The container image of the Metad service.                                                                                                                                                                             |
+  | `spec.metad.version`                                        | `v3.6.0`                                                                                                                                                        | The version of the Metad service.                                                                                                                                                                                     |
+  | `spec.metad.dataVolumeClaim.storageClassName`               | -                                                                                                                                                               | The data disk storage configurations for the Metad service.                                                                                                                                                           |
+  | `spec.metad.logVolumeClaim.storageClassName`                | -                                                                                                                                                               | The log disk storage configurations for the Metad service.                                                                                                                                                            |
+  | `spec.storaged.replicas`                                    | `3`                                                                                                                                                             | The numeric value of replicas of the Storaged service.                                                                                                                                                                |
+  | `spec.storaged.image`                                       | `vesoft/nebula-storaged`                                                                                                                                        | The container image of the Storaged service.                                                                                                                                                                          |
+  | `spec.storaged.version`                                     | `v3.6.0`                                                                                                                                                        | The version of the Storaged service.                                                                                                                                                                                  |
+  | `spec.storaged.dataVolumeClaims.resources.requests.storage` | -                                                                                                                                                               | Data disk storage size for the Storaged service. You can specify multiple data disks to store data. When multiple disks are specified, the storage path is `/usr/local/nebula/data1`, `/usr/local/nebula/data2`, etc. |
+  | `spec.storaged.dataVolumeClaims.resources.storageClassName` | -                                                                                                                                                               | The data disk storage configurations for Storaged. If not specified, the global storage parameter is applied.                                                                                                         |
+  | `spec.storaged.logVolumeClaim.storageClassName`             | -                                                                                                                                                               | The log disk storage configurations for the Storaged service.                                                                                                                                                         |
+  | `spec.storaged.enableAutoBalance`                           | `true`                                                                                                                                                          | Whether to balance data automatically.                                                                                                                                                                                |
+  | `spec.<metad|storaged|graphd>.securityContext`              | `{}`                                                                                                                                                            | Defines privilege and access control settings for NebulaGraph service containers. For details, see [SecurityContext](https://github.com/vesoft-inc/nebula-operator/blob/release-1.5/doc/user/security_context.md).    |
+  | `spec.agent`                                                | `{}`                                                                                                                                                            | Configuration of the Agent service. This is used for backup and recovery as well as log cleanup functions. If you do not customize this configuration, the default configuration will be used.                        |
+  | `spec.reference.name`                                       | -                                                                                                                                                               | The name of the dependent controller.                                                                                                                                                                                 |
+  | `spec.schedulerName`                                        | -                                                                                                                                                               | The scheduler name.                                                                                                                                                                                                   |
+  | `spec.imagePullPolicy`                                      | The image policy to pull the NebulaGraph image. For details, see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy). | The image pull policy in Kubernetes.                                                                                                                                                                                  |
+  | `spec.logRotate`                                            | -                                                                                                                                                               | Log rotation configuration. For more information, see [Manage cluster logs](../8.custom-cluster-configurations/8.4.manage-running-logs.md).                                                                           |
+  | `spec.enablePVReclaim`                                      | `false`                                                                                                                                                         | Define whether to automatically delete PVCs and release data after deleting the cluster. For more information, see [Reclaim PVs](../8.custom-cluster-configurations/8.2.pv-reclaim.md).                               |
+  |                                                             |                                                                                                                                                                 |                                                                                                                                                                                                                       |
+
 
 3. Create a NebulaGraph cluster.
 
@@ -84,7 +84,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
 
 ## Scaling clusters
 
-- The cluster scaling feature is for NebulaGraph Enterprise Edition only. 
+The cluster scaling feature is for NebulaGraph Enterprise Edition only. 
 
 ## Delete clusters
 
