--- a/docs-2.0-en/nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
+++ b/docs-2.0-en/nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
@@ -6,10 +6,8 @@ You can also define the automatic deletion of PVCs to release data by setting th
 
 ## Prerequisites
 
-You have created a cluster. For how to create a cluster with Kubectl, see [Create a cluster with Kubectl](../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md). 
-## Notes
+You have created a cluster. For how to create a cluster with Kubectl, see [Create a cluster with Kubectl](../../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md). 
 
-NebulaGraph Operator does not support dynamically adding or mounting storage volumes to a running storaged instance. 
 
 ## Steps
 
