--- a/docs-2.0-zh/nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
+++ b/docs-2.0-zh/nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
@@ -1,22 +1,16 @@
-# 均衡扩容后的 Storage 数据
+# 回收 PV
 
-!!! enterpriseonly
+NebulaGraph Operator 使用持久化卷 PV（Persistent Volume）和持久化卷声明 PVC（Persistent Volume Claim）来存储持久化数据。如果用户不小心删除了一个{{nebula.name}}集群，默认 PV 和 PVC 对象及其数据仍可保留，以确保数据安全。
 
-    仅企业版{{nebula.name}}集群支持均衡扩容后的 Storage 数据。
-
-用户在扩容 Storage 服务后，可以自主决定是否均衡 Storage 服务中的数据。本文介绍如何设置均衡 Storage 数据。
-
-{{nebula.name}}的 Storage 服务的扩容分为两个阶段，第一个阶段等待所有扩容的 Pods 为`Ready`的状态；第二个阶段执行`BALANCE DATA`和`BALANCE LEADER`命令均衡数据。这两个阶段将控制器副本的扩容过程与均衡数据过程解耦，使用户可以选择在低流量时进行均衡数据操作，有效降低数据迁移对在线服务的影响。
-
-用户可以在集群的 CR 实例的配置文件中通过参数`enableAutoBalance`来控制是否自动均衡数据。
+用户也可以在集群实例的配置文件中通过设置参数`spec.enablePVReclaim`为`true`来定义在删除集群后自动删除 PVC 以释放数据。至于在删除 PVC 后是否删除 PV，用户需要自定义 PV 的回收策略。参见 [StorageClass 中设置 reclaimPolicy](https://kubernetes.io/docs/concepts/storage/storage-classes/#reclaim-policy) 和 [PV Reclaiming](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#reclaiming) 了解 PV 回收策略。
 
 ## 前提条件
 
-已使用 K8s 创建一个集群。具体步骤，参见[使用 Kubectl 创建{{nebula.name}}集群](../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md)。
+已使用 K8s 创建一个集群。具体步骤，参见[使用 Kubectl 创建{{nebula.name}}集群](../../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md)。
 
 ## 操作步骤
 
-以下示例使用名为`nebula`的集群、名为`nebula_cluster.yaml`的 YAML 配置文件，说明如何设置`enableAutoBalance`：
+以下示例使用名为`nebula`的集群、名为`nebula_cluster.yaml`的 YAML 配置文件，说明如何设置`enablePVReclaim`：
 
 1. 执行以下命令进入`nebula`集群的编辑页面。
    
@@ -24,14 +18,15 @@
   kubectl edit nebulaclusters.apps.nebula-graph.io nebula
   ```
 
-2. 在 YAML 文件的`spec.storaged`配置项中，添加`enableAutoBalance`并设置其值为`true`。
-   
+2. 在 YAML 文件的`spec`配置项中，添加`enablePVReclaim`并设置其值为`true`。
+
   ```yaml
   apiVersion: apps.nebula-graph.io/v1alpha1
   kind: NebulaCluster
   metadata:
     name: nebula
   spec:
+    enablePVReclaim: true  //设置其值为 true。
     graphd:
       image: vesoft/nebula-graphd
       logVolumeClaim:
@@ -77,12 +72,11 @@
       version: v1
     schedulerName: default-scheduler
     storaged:
-      enableAutoBalance: true   //将其值设置为 true 时表示扩容后自动均衡 Storage 数据。
       dataVolumeClaims:
       - resources:
           requests:
             storage: 2Gi
-        storageClassName: fast-disks 
+        storageClassName: fast-disks
       - resources:
           requests:
             storage: 2Gi
@@ -105,10 +99,6 @@
   ...    
   ```
 
-  - 当设置`enableAutoBalance`的值为`true`时，表示扩容后自动均衡 Storage 数据。
-
-  - 当设置`enableAutoBalance`的值为`false`时，表示扩容后不会均衡 Storage 数据。
-
-  - 当不设置`enableAutoBalance`参数时，默认扩容 Storage 后系统不会自动均衡 Storage 数据。
-
 3. 执行`kubectl apply -f nebula_cluster.yaml`使上述更新生效。
+
+当集群删除后，系统将会自动删除 PVC 以回收存储资源。是否删除 PV，取决于 PV 的回收策略。
