--- a/docs-2.0-en/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0-en/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -22,14 +22,14 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
 
 2. Create a file named `apps_v1alpha1_nebulacluster.yaml`.
   
-  For the sample configuration file, see [sample configurations](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml).
+    See [community cluster configurations](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/nebulacluster.yaml).
 
   The following table describes the parameters in the sample configuration file.
 
   | Parameter                                                   | Default value                                                                                                                                                   | Description                                                                                                                                                                                                           |
   | :---------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
   | `metadata.name`                                             | -                                                                                                                                                               | The name of the created NebulaGraph cluster.                                                                                                                                                                          |
-  | `spec.console`                                              | -                                                                                                                                                               | Configuration of the Console service. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v1.5.0/doc/user/nebula_console.md#nebula-console).                                         |
+  | `spec.console`                                              | -                                                                                                                                                               | Configuration of the Console service. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).                                         |
   | `spec.graphd.replicas`                                      | `1`                                                                                                                                                             | The numeric value of replicas of the Graphd service.                                                                                                                                                                  |
   | `spec.graphd.image`                                         | `vesoft/nebula-graphd`                                                                                                                                          | The container image of the Graphd service.                                                                                                                                                                            |
   | `spec.graphd.version`                                       | `v3.6.0`                                                                                                                                                        | The version of the Graphd service.                                                                                                                                                                                    |
