Update port desc

--- a/docs-2.0-en/nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
+++ b/docs-2.0-en/nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
@@ -57,17 +57,11 @@ The following example uses a cluster named `nebula` and the cluster's configurat
   ...
   ```
 
-  The types of parameters that can be added under the `config` field are as follows:
-  
-  - Parameters that support runtime dynamic modification. For information about the parameters that can be dynamically modified for each service, see the **Whether supports runtime dynamic modifications** column of the parameter tables in [Meta service configuration parameters](../../5.configurations-and-logs/1.configurations/2.meta-config.md), [Storage service configuration parameters](../../5.configurations-and-logs/1.configurations/4.storage-config.md), and [Graph service configuration parameters](../../5.configurations-and-logs/1.configurations/3.graph-config.md), respectively.
-
-  - Parameters that do not support runtime dynamic modification but are flagged when you run either of the following commands:
-    - `./bin/nebula-graphd --help`
-    - `curl -s  http://10.244.1.104:19669/flags`  
+  The parameters that can be added under the `config` field are listed in detail in the [Meta service configuration parameters](../../5.configurations-and-logs/1.configurations/2.meta-config.md), [Storage service configuration parameters](../../5.configurations-and-logs/1.configurations/4.storage-config.md), and [Graph service configuration parameters](../../5.configurations-and-logs/1.configurations/3.graph-config.md) topics.
 
   !!! note
 
-      * To update cluster configurations without incurring pod restart, ensure that all parameters added under the `config` field support runtime dynamic modification. 
+      * To update cluster configurations without incurring pod restart, ensure that all parameters added under the `config` field support runtime dynamic modification. Check the **Whether supports runtime dynamic modifications** column of the parameter tables on the aforementioned parameter details pages to see if a parameter supports runtime dynamic modification.
       * If one or more parameters that do not support runtime dynamic modification are added under the `config` field, pod restart is required for the parameters to take effect.
 
   
