--- a/docs-2.0-zh/nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
+++ b/docs-2.0-zh/nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
@@ -56,17 +56,11 @@ Config map[string]string `json:"config,omitempty"`
         "auth_type": "password"
   ...
   ```
-  在 `config` 字段下可以配置的参数有以下几种：
-
-  - 支持运行时动态修改的参数。关于这些参数的更多信息，分别参见 [Meta 服务配置参数](../../5.configurations-and-logs/1.configurations/2.meta-config.md)、[Storage 服务配置参数](../../5.configurations-and-logs/1.configurations/4.storage-config.md)、[Graph 服务配置参数](../../5.configurations-and-logs/1.configurations/3.graph-config.md)的参数表格中**是否支持运行时动态修改**一列。
-
-  - 不支持运行时动态修改但 flag 标记支持的参数。您可以运行下面任意命令查看完整的参数列表：
-    - `./bin/nebula-graphd --help`
-    - `curl -s  http://10.244.1.104:19669/flags`
+  在 `config` 字段下可配置的参数详情，请分别参见 [Meta 服务配置参数](../../5.configurations-and-logs/1.configurations/2.meta-config.md)、[Storage 服务配置参数](../../5.configurations-and-logs/1.configurations/4.storage-config.md)、[Graph 服务配置参数](../../5.configurations-and-logs/1.configurations/3.graph-config.md)。
 
   !!! note
 
-      * 若要在集群运行时动态修改参数配置并且不触发 Pod 重启，请确保当前修改的参数全部支持运行时动态修改。
+      * 若要在集群运行时动态修改参数配置且不触发 Pod 重启，请确保当前修改的参数全部支持运行时动态修改。参数是否支持运行时动态修改，请查看上述参数详情页各个表格中**是否支持运行时动态修改**一列。
       * 若本次修改的参数包含一个或多个不支持运行时动态修改的参数，则会触发 Pod 重启。
 
   如果需要为 Meta 服务和 Storage 服务配置`config`，则在`spec.metad.config`和`spec.storaged.config`中添加对应的配置项。
