pv expansion & admission control
change font and add edit pencil

Update mkdocs.yml

add hpa & port config

Update mkdocs.yml

Update 3.1create-cluster-with-kubectl.md

Update requirements.txt

Update requirements.txt

--- a/docs-2.0/2.quick-start/3.1add-storage-hosts.md
+++ b/docs-2.0/2.quick-start/3.1add-storage-hosts.md
@@ -29,7 +29,7 @@ You have [connected to NebulaGraph](3.connect-to-nebula-graph.md).
 
   {{ent.ent_begin}}
 
-  If enabling the [Zone](../../4.deployment-and-installation/5.zone.md) feature, you still need to specify `INTO ZONE <zone_name>` to add Storage hosts, otherwise the Storage hosts will fail to be added. 
+  If enabling the [Zone](../4.deployment-and-installation/5.zone.md) feature, you still need to specify `INTO ZONE <zone_name>` to add Storage hosts, otherwise the Storage hosts will fail to be added. 
 
   ```ngql
   ADD HOSTS <ip>:<port> [,<ip>:<port> ...] INTO ZONE <zone_name>;
