--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
@@ -4,19 +4,16 @@ NebulaGraph Operator uses PVs (Persistent Volumes) and PVCs (Persistent Volume C
 
 You can also define the automatic deletion of PVCs to release data by setting the parameter `spec.enablePVReclaim` to `true` in the configuration file of the cluster instance. As for whether PV will be deleted automatically after PVC is deleted, you need to customize the PV reclaim policy. See [reclaimPolicy in StorageClass](https://kubernetes.io/docs/concepts/storage/storage-classes/#reclaim-policy) and [PV Reclaiming](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#reclaiming) for details.
 
-## Notes
-
-NebulaGraph Operator does not support dynamically adding or mounting storage volumes to a running storaged instance.
-
 ## Prerequisites
 
-You have created a cluster. For how to create a cluster with Kubectl, see [Create a cluster with Kubectl](../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md). 
+You have created a cluster. For how to create a cluster with Kubectl, see [Create a cluster with Kubectl](../../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md). 
+
 
 ## Steps
 
 The following example uses a cluster named `nebula` and the cluster's configuration file named `nebula_cluster.yaml` to show how to set `enablePVReclaim`:
 
-1.  Run the following command to access the edit page of the `nebula` cluster.
+1.  Run the following command to edit the `nebula` cluster's configuration file.
    
   ```bash
   kubectl edit nebulaclusters.apps.nebula-graph.io nebula
