--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/storage/8.3.balance-data-when-scaling-storage.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/storage/8.3.balance-data-when-scaling-storage.md
@@ -1,9 +1,5 @@
 # Balance storage data after scaling out
 
-!!! enterpriseonly
-
-    This feature is for NebulaGraph Enterprise Edition only.
-
 After the Storage service is scaled out, you can decide whether to balance the data in the Storage service. 
 
 The scaling out of the NebulaGraph's Storage service is divided into two stages. In the first stage, the status of all pods is changed to `Ready`. In the second stage, the commands of `BALANCE DATA` and `BALANCE LEADER` are executed to balance data. These two stages decouple the scaling out process of the controller replica from the balancing data process, so that you can choose to perform the data balancing operation during low traffic period. The decoupling of the scaling out process from the balancing process can effectively reduce the impact on online services during data migration.
@@ -12,7 +8,7 @@ You can define whether to balance data automatically or not with the parameter `
 
 ## Prerequisites
 
-You have created a NebulaGraph cluster. For how to create a cluster with Kubectl, see [Create a cluster with Kubectl](../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md). 
+You have created a NebulaGraph cluster. For how to create a cluster with Kubectl, see [Create a cluster with Kubectl](../../3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md). 
 
 ## Steps
 
