--- a/docs-2.0-zh/nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
+++ b/docs-2.0-zh/nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
@@ -26,7 +26,9 @@ Config map[string]string `json:"config,omitempty"`
   kubectl edit nebulaclusters.apps.nebula-graph.io nebula
   ```
 
-2. 在 YAML 文件的`spec.graphd.config`配置项中，添加`enable_authorize`和`auth_type`。
+
+2. 在 YAML 文件的`spec.graphd.config`配置项中，添加需要修改的参数。下文以 `enable_authorize`和`auth_type`为例。
+
 
   ```yaml
   apiVersion: apps.nebula-graph.io/v1alpha1
@@ -57,18 +59,118 @@ Config map[string]string `json:"config,omitempty"`
   ...
   ```
 
+  在`config`字段下可配置的参数详情，请分别参见 [Meta 服务配置参数](../../5.configurations-and-logs/1.configurations/2.meta-config.md)、[Storage 服务配置参数](../../5.configurations-and-logs/1.configurations/4.storage-config.md)、[Graph 服务配置参数](../../5.configurations-and-logs/1.configurations/3.graph-config.md)。
+
+  !!! note
+
+      * 若要在集群运行时动态修改参数配置且不触发 Pod 重启，请确保当前修改的参数全部支持运行时动态修改。参数是否支持运行时动态修改，请查看上述参数详情页各个表格中**是否支持运行时动态修改**一列。
+      * 若本次修改的参数包含一个或多个不支持运行时动态修改的参数，则会触发 Pod 重启。
+
+
   如果需要为 Meta 服务和 Storage 服务配置`config`，则在`spec.metad.config`和`spec.storaged.config`中添加对应的配置项。
 
 3. 执行`kubectl apply -f nebula_cluster.yaml`使上述更新生效。
 
-  在自定义参数`enable_authorize`和`auth_type`后，Graph 服务对应的 ConfigMap（`nebula-graphd`）中的配置将被覆盖。
 
+  在修改参数值后，Graph 服务对应的 ConfigMap（`nebula-graphd`）中的配置将被覆盖。
 
-## 在线修改集群配置
+### 配置自定义端口
 
-在线修改集群配置主要通过调用`HTTP`接口对集群的配置参数进行修改，而无需重启集群 Pod。
+您可以在`config`字段中添加`port`和`ws_http_port`参数，从而配置自定义的端口。这两个参数的详细信息，请参见[Meta 服务配置参数](../../5.configurations-and-logs/1.configurations/2.meta-config.md)、[Storage 服务配置参数](../../5.configurations-and-logs/1.configurations/4.storage-config.md)、[Graph 服务配置参数](../../5.configurations-and-logs/1.configurations/3.graph-config.md)的 networking 配置一节。
 
-需要注意的是，只有当`config`中的配置项均为可在运行时动态修改的参数时，才能触发在线修改集群配置操作。如果`config`中的配置项包含不可动态修改的参数，那么集群配置将通过重启 Pod 的方式进行更新。
+!!! note
 
-关于各个服务可动态修改的参数，分别参见 [Meta 服务配置参数](../../5.configurations-and-logs/1.configurations/2.meta-config.md)、[Storage 服务配置参数](../../5.configurations-and-logs/1.configurations/4.storage-config.md)、[Graph 服务配置参数](../../5.configurations-and-logs/1.configurations/3.graph-config.md)的配置参数表格中**是否支持运行时动态修改**一列。
+    * 自定义`port`和`ws_http_port`参数配置后，会触发 Pod 重启，并在重启后生效。 
+    * 在集群启动后，不建议修改`port`参数。
+
+1. 修改集群配置文件。
+
+  ```yaml
+  apiVersion: apps.nebula-graph.io/v1alpha1
+  kind: NebulaCluster
+  metadata:
+    name: nebula
+    namespace: default
+  spec:
+    graphd:
+      config:
+        port: "3669"
+        ws_http_port: "8080"
+      resources:
+        requests:
+          cpu: "200m"
+          memory: "500Mi"
+        limits:
+          cpu: "1"
+          memory: "1Gi"
+      replicas: 1
+      image: vesoft/nebula-graphd
+      version: {{nebula.tag}}
+    metad:
+      config:
+        ws_http_port: 8081
+      resources:
+        requests:
+          cpu: "300m"
+          memory: "500Mi"
+        limits:
+          cpu: "1"
+          memory: "1Gi"
+      replicas: 1
+      image: vesoft/nebula-metad
+      version: {{nebula.tag}}
+      dataVolumeClaim:
+        resources:
+          requests:
+            storage: 2Gi
+        storageClassName: local-path
+    storaged:
+      config:
+        ws_http_port: 8082
+      resources:
+        requests:
+          cpu: "300m"
+          memory: "500Mi"
+        limits:
+          cpu: "1"
+          memory: "1Gi"
+      replicas: 1
+      image: vesoft/nebula-storaged
+      version: {{nebula.tag}}
+      dataVolumeClaims:
+      - resources:
+          requests:
+            storage: 2Gi
+        storageClassName: local-path
+      enableAutoBalance: true
+    reference:
+      name: statefulsets.apps
+      version: v1
+    schedulerName: default-scheduler
+    imagePullPolicy: IfNotPresent
+    imagePullSecrets:
+    - name: nebula-image
+    enablePVReclaim: true
+    topologySpreadConstraints:
+    - topologyKey: kubernetes.io/hostname
+      whenUnsatisfiable: "ScheduleAnyway"
+  ```
+
+2. 执行`kubectl apply -f nebula_cluster.yaml`使上述更新生效。
+
+3. 验证配置已经生效。
+
+  ```bash
+  kubectl get svc
+  ```
+
+  返回示例：
+  
+  ```
+  NAME                        TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)                      AGE
+  nebula-graphd-headless      ClusterIP   None             <none>        3669/TCP,8080/TCP            10m
+  nebula-graphd-svc           ClusterIP   10.102.13.115    <none>        3669/TCP,8080/TCP            10m
+  nebula-metad-headless       ClusterIP   None             <none>        9559/TCP,8081/TCP            11m
+  nebula-storaged-headless    ClusterIP   None             <none>        9779/TCP,8082/TCP,9778/TCP   11m
+  ```
 
