--- a/docs-2.0-zh/20.appendix/0.FAQ.md
+++ b/docs-2.0-zh/20.appendix/0.FAQ.md
@@ -25,7 +25,7 @@
 
  
 
-!!! compatibility "`X`版本兼容性"
+!!! compatibility
 
     {{nebula.name}} {{ nebula.release }} 与 历史版本 （包括{{nebula.name}} 1.x 和 2.x) 的数据格式、客户端通信协议均**双向不兼容**。
     使用**老版本**客户端连接**新版本**服务端，会导致服务进程**退出**。
