Modify the description of neighbor ports

--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -54,7 +54,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 | :----------------------- | :---------------- | :---------------------------------------------------- |:----------------- |
 | `meta_server_addrs`     | `127.0.0.1:9559` | Specifies the IP addresses and ports of all Meta Services.  Multiple addresses are separated with commas. |  No|
 |`local_ip`               | `127.0.0.1`      | Specifies the local IP for the Meta Service. The local IP address is used to identify the nebula-metad process. If it is a distributed cluster or requires remote access, modify it to the corresponding address.|  No|
-| `port`                  | `9559`           | Specifies RPC daemon listening port of the Meta service. The external port for the Meta Service is predefined to `9559`. The internal port is predefined to `port + 1`, i.e., `9560`. Nebula Graph uses the internal port for multi-replica interactions. |  No|
+| `port`                  | `9559`           | Specifies RPC daemon listening port of the Meta service. The neighboring `+1` (`9560`) port is used for Raft communication between Meta services. |  No|
 | `ws_ip`                   | `0.0.0.0`      | Specifies the IP address for the HTTP service.                                   |  No|
 | `ws_http_port`            | `19559`        | Specifies the port for the HTTP service.                                         |  No|
 |`ws_storage_http_port`|`19779`| Specifies the Storage service listening port used by the HTTP protocol. It must be consistent with the `ws_http_port` in the Storage service configuration file. This parameter only applies to standalone NebulaGraph.|  No|
