--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -59,7 +59,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 | :----------------------- | :---------------- | :---------------------------------------------------- |:------------------|
 | `meta_server_addrs`        | `127.0.0.1:9559` | Specifies the IP addresses and ports of all Meta Services.  Multiple addresses are separated with commas. |  No|
 |`local_ip`                  | `127.0.0.1`      | Specifies the local IP for the Storage Service. The local IP address is used to identify the nebula-storaged process. If it is a distributed cluster or requires remote access, modify it to the corresponding address.|  No|
-| `port`                     | `9779`           | Specifies RPC daemon listening port of the Storage service. The external port for the Meta Service is predefined to `9779`. The internal port is predefined to `9777`, `9778`, and `9780`. Nebula Graph uses the internal port for multi-replica interactions. <br/> `9778`: The port used by the Admin service, which receives Meta commands for Storage. `9780`: The port used for Raft communication.|  No|
+| `port`                     | `9779`           | Specifies RPC daemon listening port of the Storage service. The neighboring ports `-1` (`9778`) and `+1` (`9780`) are also used. <br/>`9778`: The port used by the Admin service, which receives Meta commands for Storage. <br/>`9780`: The port used for Raft communication between Storage services.|  No|
 | `ws_ip`                    | `0.0.0.0`        | Specifies the IP address for the HTTP service. |  No|
 | `ws_http_port`             | `19779`          | Specifies the port for the HTTP service. |  No|
 |`heartbeat_interval_secs`   | `10`             | Specifies the default heartbeat interval. Make sure the `heartbeat_interval_secs` values for all services are the same, otherwise NebulaGraph **CANNOT** work normally. This configuration is measured in seconds. |  Yes|
