--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -56,7 +56,7 @@ Meta 服务提供了两份初始配置文件`nebula-metad.conf.default`和`nebul
 | :----------------------- | :---------------- | :---------------------------- |:------------------|
 | `meta_server_addrs`     | `127.0.0.1:9559` | 全部 Meta 服务的 IP 地址和端口。多个 Meta 服务用英文逗号（,）分隔。 |不支持|
 |`local_ip`               | `127.0.0.1`      | Meta 服务的本地 IP 地址。本地 IP 地址用于识别 nebula-metad 进程，如果是分布式集群或需要远程访问，请修改为对应地址。|不支持|
-| `port`                  | `9559`           | Meta 服务的 RPC 守护进程监听端口。Meta 服务对外端口为`9559`，对内端口为`对外端口+1`，即`9560`，{{nebula.name}}使用内部端口进行多副本间的交互。 |不支持|
+| `port`                  | `9559`           | Meta 服务的 RPC 守护进程监听端口。同时还会使用相邻的`+1`（`9560`）端口用于 Meta 服务之间的 Raft 通信。 |不支持|
 | `ws_ip`                   | `0.0.0.0`      | HTTP 服务的 IP 地址。                                   |不支持|
 | `ws_http_port`            | `19559`        | HTTP 服务的端口。                                     |不支持|
 |`ws_storage_http_port`|`19779`| HTTP 协议监听 Storage 服务的端口，需要和 Storage 服务配置文件中的`ws_http_port`保持一致。仅存算合并版{{nebula.name}}需要设置本参数。|不支持|
