--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -59,7 +59,7 @@ Storage 服务提供了两份初始配置文件`nebula-storaged.conf.default`和
 | :----------------------- | :---------------- | :------------------------|:----------------------- |
 | `meta_server_addrs`     | `127.0.0.1:9559` | 全部 Meta 服务的 IP 地址和端口。多个 Meta 服务用英文逗号（,）分隔。 |不支持|
 |`local_ip`               | `127.0.0.1`      | Storage 服务的本地 IP 地址。本地 IP 地址用于识别 nebula-storaged 进程，如果是分布式集群或需要远程访问，请修改为对应地址。|不支持|
-| `port`                  | `9779`           | Storage 服务的 RPC 守护进程监听端口。Storage 服务对外端口为`9779`，对内端口为`9777`、`9778`和`9780`，{{nebula.name}}使用内部端口进行多副本间的交互。`9778`：Admin 服务（Storage 接收 Meta 命令的服务）占用的端口；`9780`：Raft 通信端口。|不支持|
+| `port`                  | `9779`           | Storage 服务的 RPC 守护进程监听端口。同时还会使用相邻的`-1`（`9778`）和`+1`（`9780`）端口。<br/>`9778`：Admin 服务（Storage 接收 Meta 命令的服务）占用的端口。<br/>`9780`：Storage 服务之间的 Raft 通信端口。|不支持|
 | `ws_ip`                   | `0.0.0.0`      | HTTP 服务的 IP 地址。                                   |不支持|
 | `ws_http_port`            | `19779`        | HTTP 服务的端口。                                     |不支持|
 |`heartbeat_interval_secs`  | `10`           | 默认心跳间隔。请确保所有服务的`heartbeat_interval_secs`取值相同，否则会导致系统无法正常工作。单位：秒。     |支持|
