--- a/docs-2.0-zh/backup-and-restore/3.manage-snapshot.md
+++ b/docs-2.0-zh/backup-and-restore/3.manage-snapshot.md
@@ -14,7 +14,7 @@
 
 - 不支持自动回收创建失败的快照垃圾文件，需要手动删除。
 
-- 不支持指定快照保存路径，默认路径为`/usr/local/nebula/data`。
+- 不支持指定快照保存路径，默认路径为配置文件中`data_path`指定目录。
 
 ## 快照路径
 
